# MTBMT-Mentor-TrajectaryBasedModelTrainner

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  analyze_trajectory_quality.py  demo_classification.csv  pyproject.toml  requirements-dev.txt  requirements-rl.txt  requirements.txt  test_trajectory_labels.py  trajectary.py  决策树轨迹生成说明.md  核心概念说明.md  轨迹质量评估分析说明.md
data/: big.csv
data/openml_100_rust/: manifest.jsonl  openml-1539.csv  openml-1600.csv  openml-377.csv  openml-381.csv  openml-43995.csv  openml-44378.csv  openml-44415.csv  openml-44419.csv  openml-44545.csv  openml-44764.csv  openml-45012.csv  openml-45053.csv  openml-46332.csv  openml-46504.csv  openml-46542.csv  openml-46629.csv  openml-542.csv
data/openml_rust_smoke/: manifest.jsonl  openml-42863.csv  openml-46647.csv  openml-585.csv
data/openml_smoke/: manifest.jsonl  openml-40498.csv  openml-40650.csv  openml-42843.csv  openml-44442.csv  openml-44748.csv
data/public10/: banknote_authentication.csv  glass.csv  ionosphere.csv  manifest.jsonl  sonar.csv  spambase.csv  wine.csv
data/public10_v2/: diabetes.csv  heart_statlog.csv  iris.csv  manifest.jsonl
doc/: 运行说明.md
docs/: feature_relevance_algorithm_selection.md
experience/: experience.jsonl
rust/: imp.rs
rust/src/: main.rs
scripts/: benchmark_relevance.py  evaluate_meta_selector.py  fetch_openml_100_and_ingest.py  guided_combo_eval.py  run_zig_benchmark.ps1  visualize_guided_suite_heatmap.py
src/: lib.rs
tests/: test_trajectory_features.py  test_trajectory_labels.py
zig_version/: README.md  build.zig
(+49 files in other folders)
